Update MongoDB URI to use environment variable placeholders for credentials.

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/mydatabase?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://{DB_USERNAME}:{DB_PASSWORD}@cluster.mongodb.net/mydatabase?retryWrites=true&w=majority
